--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,5 @@
 
+
 html{
   font-size: 62.5%; 
   box-sizing: border-box;
@@ -8,9 +9,10 @@ body{
   margin: 0;
   height: 100vh;
   font-size: 1.6rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Gotham', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #F7F7F7;
 }
 
 #root{
@@ -18,6 +20,15 @@ body{
 }
 
 /* Layout */
+
+.badge {
+  background-color: #f02020;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 0.2rem 0.7rem;
+  font-size: 1.4rem;
+  margin-left: 0.2rem;
+}
 
 .grid-container{
   display: grid;
@@ -32,7 +43,7 @@ body{
 
 header{
   grid-area: header;
-  background-color: rgb(20, 20, 20);
+
 }
 
 main{
@@ -42,8 +53,9 @@ main{
 
 footer{
   grid-area: footer;
-  background-color: rgb(20, 20, 20);
+  background-color: #1A2238;
   color: rgb(223, 223, 223);
+  font-family: 'Gotham Black', sans-serif;
 }
 
 /* Common */
@@ -53,18 +65,65 @@ a{
 }
 
 a:hover{
-  color: tomato;
+  color: #FF6A3D;
+}
+
+ul{
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+li{
+  margin-top: 1rem;
+}
+
+button{
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 0.1rem #a4a4a4 solid;
+  font-family: 'Gotham Black', sans-serif;
+  background-color: #a4a4a4;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color: #FF6A3D;
+  color: whitesmoke;
+}
+
+
+button.block{
+  width: 100%;
+}
+
+.container{
+  padding: 2rem;
+}
+
+
+.container-b{
+  padding: 2rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 header a{
-  color: burlywood;
+  color: #1A2238;;
   padding: 1rem;
+  font-family: 'Gotham Black', sans-serif;
 }
 
 a.brand{
-  color: burlywood;
-  font-size: 3rem;
+  color: #1A2238;
+  font-size: 4rem;
   font-weight: bold;
+
+}
+
+.itemName{
+  color: white;
+ 
 }
 
 .row{
@@ -72,27 +131,185 @@ a.brand{
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  margin-top: 1rem;
+  padding: 1rem;
+}
+
+.col{
+  padding: 1rem;
+}
+
+.row-items{
+  display: flex;
+  flex-direction: row;
+  margin-top: 1rem;
+  padding: 1rem;
+}
+
+.rowb{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+.rowb.top{
+  align-items: flex-start;
+}
+
+.col-1{
+  flex:1 1 25rem;
+  margin-top: 10%;
+}
+
+.cart{
+  margin-top: 12.5%;
+}
+
+.col-2{
+  flex:2 1 50rem;
+  margin-left: 2rem;
+}
+
+.row-desc{
+  display: flex;
+  flex-direction: row;
+  padding: .5rem;
+}
+
+.price-text{
+  color: #FF6A3D;
+  font-size: 2rem;
+  font-family: 'Gotham Black', sans-serif;
+}
+
+.col-desc{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start;
+  margin-top: 1rem;
+  
+}
+
+.col-qty{
+  width: 60%;
+  height: auto;
+  text-align: center;
+  font-family: 'Gotham', sans-serif;
+  font-size: 1.5rem;
+  border: #203040 solid;
+}
+
+.row-desc-center{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: .5rem;
 }
 
 .row.center{
   justify-content: center;
 }
 
-img{
-  border-radius: 0.5rem ;
+img.medium{
+  max-width: 17.5rem;
+  width: 100%;
 }
 
-img.medium{
-  max-width: 24rem;
+img.logo{
+  max-width: 3rem;
   width: 100%;
-  
+}
+
+.border{
+  width: 100%;
+  border: #203040;
+  border-style: solid;
+  padding-left: 1vw;
+  padding-right: 1vw;
+}
+
+
+.border-try{
+  border: #203040;
+  border-style: solid;
+  padding-left: 1vw;
+  padding-right: 1vw;
+}
+
+.link-item{
+  padding-top: 1.7rem;
+  color: #1A2238;;
+  font-size: 2.5rem;
+  font-family: 'Gotham Black', sans-serif;
+  width: 30rem;
+}
+
+img.large{
+  width: 80%;
+  margin-left: 2rem;
+  margin-top: 1rem;
+  border: .5rem #FF6A3D solid;
+}
+
+.white{
+  color: white;
+}
+
+.checkout{
+
+  width: 75vw;
+  text-align: center;
+}
+
+.checkoutButton{
+  width: 50vw;
+}
+
+.deleteButton{
+  width: 80%;
+}
+img.small{
+  width: 20rem;
+  margin-left: 2rem;
+  margin-top: 1rem;
+  border: .5rem #FF6A3D solid;
 }
 
 .card{
-  border: 0.1rem #c0c0c0 solid;
-  background-color: #f8f8f8;
+  background-color: #1A2238;
   border-radius: 0.5rem;
   margin: 1rem;
+  
+}
+
+.cardb{
+  background-color: #283765;
+  border-radius: 0.5rem;
+  margin: 1rem;
+  border: .5rem #FF6A3D solid;
+}
+
+.cart-text{
+  font-family: 'Gotham', sans-serif;
+  color: whitesmoke;
+  font-size: 1.5rem;
+}
+
+.status-text{
+  font-family: 'Gotham Black', sans-serif;
+
+  font-size: 1.5rem;
+}
+
+.inner{
+  border: .5rem #FF6A3D solid;
+}
+
+.outer {
+  background-color: #1A2238;
 }
 
 .card-body{
@@ -101,13 +318,189 @@ img.medium{
 
 .card-body > *{
   margin-bottom: 0.5rem;
-  font-size: 1rem;
+  font-size: 1.1rem;
 }
 
 .price{
   font-size: 1.5rem;
+  color: white;
 }
 
 .rating span{
   color: rgb(216, 216, 18) ;
+  font-size: 1.5rem;
+}
+
+.rating span:last-child{
+  color: white;
+  font-size: 1.2rem;
+}
+
+
+.success{
+  color: #31eb5c;
+}
+
+.error{
+  color: red;
+}
+
+.alert{
+  padding: 1rem;
+  border: 0.1rem solid transparent;
+  border-radius: 0.5rem;
+}
+
+.alert-info{
+  color: #2020a0;
+  background-color: #e0e0ff;
+}
+
+.Error-page{
+  margin: auto;
+  width: 50%;
+  padding: 2rem;
+  text-align: center;
+ 
+}
+
+.Error-Pic{
+  width: 30rem;
+  margin-top: 4rem;
+}
+
+.Error-text{
+  padding: 1rem;
+  font-family: "Ninja Naruto";
+  font-size: 2.5rem;
+  color: red;
+  
+}
+
+.col-2b{
+  flex:2 1 50rem;
+}
+
+.col-1b{
+  flex:1 1 25rem;
+
+}
+
+.rowc{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+.rowc.top{
+  align-items: flex-start;
+}
+
+
+.form {
+  max-width: 60rem;
+  margin: 0 auto;
+}
+.form > div {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+}
+.form label {
+  margin: 1rem 0;
+  display: block;
+}
+
+
+.dropdown {
+  display: inline-block;
+  position: relative;
+}
+.dropdown-content {
+  position: absolute;
+  display: none;
+  right: 0;
+  min-width: 12rem;
+  padding: 1rem;
+  z-index: 1;
+  background-color: #203040;
+  margin: 0;
+  margin-top: 0.4rem;
+  border-radius: 0.5rem;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+
+.quantity-select{
+  text-align: center;
+  font-family: 'Gotham', sans-serif;
+  color: black;
+  width: 6rem;
+  font-size: 1.5rem;
+}
+
+.labels{
+
+  font-family: 'Gotham', sans-serif;
+  font-size: 2rem;
+  color: #FF6A3D ;
+}
+
+.label-link{
+
+  font-family: 'Gotham Black', sans-serif;
+  font-size: 2rem;
+  color: whitesmoke ;
+}
+
+.title{
+  padding: 0;
+  margin: 0;
+  margin-top: 2rem;
+  font-family: 'Gotham Black', sans-serif;
+  font-size: 4rem;
+  color: white;
+}
+
+.bg-form{
+  margin-top: 4rem;
+  background-color: #1A2238;
+  border-radius: 1rem;
+}
+
+input[type=email], select {
+  width: 100%;
+  padding: 8px 20px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=password], select {
+  width: 100%;
+  padding: 8px 20px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.signin{
+  width: 30%;
+  font-size: 1.5rem;
+}
+
+.center{
+  align-items: center;
+}
+
+.container-checkout{
+  margin-left: 1rem;
+  margin-right: 2rem;
 }
