--- a/template/index.html
+++ b/template/index.html
@@ -1,145 +1,42 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shoplyft</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Login</title>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    <div class="grid-container">
-        <header class="row">
-            <div>
-                <a href="index.html" class="brand">Shoplyft</a>
-            </div>
-            <div>
-                <a href="cart.html"> Cart</a>
-                <a href="signin">Sign In</a>
-            </div>
-        </header>
-
-        <main>
-           <div class="row center">
-               <div class="card">
-                    <a href="product.html">
-                     <img class="medium" src="./images/p1.jpg" alt="product">
-                    </a>
-                    <div class="card-body">
-                        <a href="product.html"><h2>Minatozaki Sana</h2></a>
-                        <div class="rating">
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                        </div>
-                        <div class="price">
-                            $120
-                        </div>
-                    </div>
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card bg-dark text-white shadow-4-strong" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
+            <h3 class="mb-5">Admin Login</h3>
+            <form action="#" method="POST">
+                <div class="form-outline mb-4">
+                    <input type="email" class="form-control form-control-lg" />
+                    <label class="form-label">Email</label>
                 </div>
-                
-                <div class="card">
-                    <a href="product.html">
-                     <img class="medium" src="./images/p2.jpg" alt="product">
-                    </a>
-                    <div class="card-body">
-                        <a href="product.html"><h2>Kang Hyewon</h2></a>
-                        <div class="rating">
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                        </div>
-                        <div class="price">
-                            $120
-                        </div>
-                    </div>
+                <div class="form-outline mb-4">
+                    <input type="password" class="form-control form-control-lg" />
+                    <label class="form-label text" >Password</label>
                 </div>
-                
-                <div class="card">
-                    <a href="product.html">
-                     <img class="medium" src="./images/p3.jpg" alt="product">
-                    </a>
-                    <div class="card-body">
-                        <a href="product.html"><h2>Shin Ryujin</h2></a>
-                        <div class="rating">
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                        </div>
-                        <div class="price">
-                            $120
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="card">
-                    <a href="product.html">
-                     <img class="medium" src="./images/p4.jpg" alt="product">
-                    </a>
-                    <div class="card-body">
-                        <a href="product.html"><h2>Yu Jimin</h2></a>
-                        <div class="rating">
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                        </div>
-                        <div class="price">
-                            $120
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="card">
-                    <a href="product.html">
-                     <img class="medium" src="./images/p5.jpg" alt="product">
-                    </a>
-                    <div class="card-body">
-                        <a href="product.html"><h2>Kim Minjeong</h2></a>
-                        <div class="rating">
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                        </div>
-                        <div class="price">
-                            $120
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="card">
-                    <a href="product.html">
-                     <img class="medium" src="./images/p6.png" alt="product">
-                    </a>
-                    <div class="card-body">
-                        <a href="product.html"><h2>Bae Suzy</h2></a>
-                        <div class="rating">
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                            <span> <i class="fa fa-star"></i> </span>
-                        </div>
-                        <div class="price">
-                            $120
-                        </div>
-                    </div>
-                </div>
-                
-           </div>
-        </main>
-        <footer class="row center"> All rights reserved
-        </footer>
+                <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+                <hr class="my-4">
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </body>
 </html>
+
